# llm-terminal-assistant

./: .env.example  .gitignore  CHANGELOG.md  README.md  env.example  main.py  pyproject.toml  requirements.txt
a2a_server/: a2a_server.py  memory.py  planner.py
cli/: mcp_client.py  terminal_client.py
data/: execution_plans.json  session_memory.json  test_planning_session.json  test_session.json
mcp_server/: mcp_server.py
scripts/: demo.py  test_mcp.py  test_phase_4a.py  test_phase_4b.py  test_phase_4b_comprehensive.py
