[project]
name = "llm-terminal-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "mcp[cli]>=1.9.2",
    "openai>=1.83.0",
    "psutil>=7.0.0",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "typer>=0.16.0",
    "uvicorn>=0.34.3",
]
